--- a/force-app/main/default/lwc/stoRegisterThread/registerThreadTemplate.html
+++ b/force-app/main/default/lwc/stoRegisterThread/registerThreadTemplate.html
@@ -4,7 +4,12 @@
         <h1 class="navds-heading navds-heading--xlarge header">{themeToShow}</h1>
         <c-community-error-summary error-list={errorList} onclickedevent={handleErrorClick} class="errorSummary">
         </c-community-error-summary>
-        <p class="navds-bodylong navds-bodylong--large ingress">{ingressLabel}</p>
+        <template lwc:if={showTextArea}>
+            <p class="navds-bodylong navds-bodylong--large subtitle">{ingressLabel}</p>
+        </template>
+        <template lwc:else>
+            <p class="navds-bodylong navds-bodylong--large subtitle">{openThreadText}</p>
+        </template>
         <template lwc:if={showspinner}>
             <div class="spinner-container">
                 <svg
@@ -36,17 +41,17 @@
             </div>
         </template>
         <template lwc:else>
-            <div class="navds-accordion">
-                <template for:each={newsList} for:item="news">
-                    <c-community-expandable-panel title={news.header} key={news.id}>
-                        <lightning-formatted-rich-text
-                            class="navds-body-short navds-body-short--small"
-                            value={news.body}
-                        ></lightning-formatted-rich-text>
-                    </c-community-expandable-panel>
-                </template>
-            </div>
             <template lwc:if={showTextArea}>
+                <div class="navds-accordion">
+                    <template for:each={newsList} for:item="news">
+                        <c-community-expandable-panel title={news.header} key={news.id}>
+                            <lightning-formatted-rich-text
+                                class="navds-body-short navds-body-short--small"
+                                value={news.body}
+                            ></lightning-formatted-rich-text>
+                        </c-community-expandable-panel>
+                    </template>
+                </div>
                 <!-- Theme Choice Radio Button -->
                 <template lwc:if={showThemeRadioButton}>
                     <div class="theme-radio-button">
@@ -109,9 +114,8 @@
                         {label.showtermstext}
                     </button>
                 </div>
-
                 <button
-                    class="navds-button navds-button--primary navds-button--medium send-button"
+                    class="navds-button navds-button--primary navds-button--medium"
                     type="submit"
                     aria-disabled="false"
                     onclick={submitRequest}
@@ -120,15 +124,39 @@
                 </button>
             </template>
             <template lwc:else>
-                <h2 class="navds-heading navds-heading--medium">Dine åpne samtaler om {category}</h2>
-                <template for:each={openThreadList} for:item="thread" for:index="index">
-                    <c-sto-inbox-close-item
-                        thread={thread}
-                        content-type={contentType}
-                        key={thread.recordId}
-                        index={index}
-                        onclosethread={handleCloseThread}
-                    ></c-sto-inbox-close-item>
+                <h2 class="navds-heading navds-heading--medium subheader">
+                    Dine aktive samtaler om {capitalizedCategory}
+                </h2>
+                <div class="inbox-list">
+                    <template for:each={openThreadList} for:item="thread" for:index="index">
+                        <div key={thread.recordId}>
+                            <template lwc:if={canOpenMoreThreads}>
+                                <c-sto-message-inbox-item
+                                    thread={thread}
+                                    content-type={contentType}
+                                    index={index}
+                                    onclosethread={handleCloseThread}
+                                ></c-sto-message-inbox-item>
+                            </template>
+                            <template lwc:else>
+                                <c-sto-inbox-close-item
+                                    thread={thread}
+                                    content-type={contentType}
+                                    index={index}
+                                    onclosethread={handleCloseThread}
+                                ></c-sto-inbox-close-item>
+                            </template>
+                        </div>
+                    </template>
+                </div>
+                <template lwc:if={canOpenMoreThreads}>
+                    <button
+                        class="navds-button navds-button--primary navds-button--medium new-message-button"
+                        aria-disabled="false"
+                        onclick={handleShowTextArea}
+                    >
+                        Skriv ny melding
+                    </button>
                 </template>
             </template>
         </template>
