added end dialogue functionality (NKS-1894)

--- a/force-app/main/default/lwc/communityAlert/communityAlert.html
+++ b/force-app/main/default/lwc/communityAlert/communityAlert.html
@@ -24,7 +24,7 @@
             ></path>
         </svg>
         <div class="navds-alert__wrapper navds-alert__wrapper--maxwidth navds-body-long navds-body-long--medium">
-            {alertText}
+            <lightning-formatted-rich-text value={alertText}></lightning-formatted-rich-text>
         </div>
     </div>
 </template>
