--- a/force-app/main/default/lwc/stoInboxCloseItem/stoInboxCloseItem.html
+++ b/force-app/main/default/lwc/stoInboxCloseItem/stoInboxCloseItem.html
@@ -1,46 +1,10 @@
 <template>
-    <c-sto-Message-Inbox-Item thread={thread} is-close-item>
+    <c-sto-Message-Inbox-Item thread={thread} close-intent>
         <div slot="endDialogue" class="end-dialogue-container">
-            <button class="navds-button navds-button--secondary navds-button--small" onclick={openModal}>
+            <button class="navds-button navds-button--secondary navds-button--small" onclick={handleClick}>
                 Avslutt samtale
             </button>
         </div>
     </c-sto-Message-Inbox-Item>
-    <c-community-modal
-        show-modal={modalOpen}
-        onmodalclosed={closeModal}
-        onkeyup={handleKeyboardEvent}
-        onfocuslast={handleFocusLast}
-        class="override"
-        show-footer-line
-        hide-padding
-    >
-        <div slot="modalHeader" class="modal-header">
-            <h1 class="navds-heading navds-heading--medium">Avslutt samtale</h1>
-            <p class="leftAlign-mobile modal-header-text">Er du sikker på at du vil avslutte denne samtalen?</p>
-        </div>
-        <div slot="modalContent" class="navds-panel navds-panel--border modal-content">
-            <lightning-formatted-date-time
-                value={thread.latestMessageDate}
-                month="2-digit"
-                day="2-digit"
-                year="numeric"
-            ></lightning-formatted-date-time>
-            &nbsp;- <span class={statusColor}> {thread.status} </span>
-            <h2 class="navds-heading navds-heading--small">{threadName}</h2>
-            <p class="navds-body-long messagebox threeLinesMobile">{thread.latestmessage.messageText}</p>
-        </div>
-        <div slot="modalFooter" class="modal-footer">
-            <c-ds-button size="medium" variant="primary" text="Ja, avslutt samtale" onbuttonclick={closeThread}>
-            </c-ds-button>
-            <c-ds-button
-                size="medium"
-                variant="secondary"
-                text="Avbryt"
-                onbuttonclick={closeModal}
-                class="lastFocusElement"
-            >
-            </c-ds-button>
-        </div>
-    </c-community-modal>
+    <c-sto-end-dialogue-modal lwc:ref="childRef" onclosethread={handleCloseThread}></c-sto-end-dialogue-modal>
 </template>
