--- a/force-app/main/default/lwc/communityCheckbox/communityCheckbox.html
+++ b/force-app/main/default/lwc/communityCheckbox/communityCheckbox.html
@@ -2,28 +2,55 @@
     <div class={wrapperClass}>
         <input
             aria-invalid={error}
-            type="checkbox"
-            class="navds-checkbox__input checkboks"
-            data-id="checkbox"
             id="checkbox"
-            name="checkbox"
+            type="checkbox"
+            class="navds-checkbox__input checkbox"
             onchange={toggleChecked}
             checked={checked}
             onfocusout={checkError}
-        /><label class="navds-checkbox__label" for="checkbox">{labelText}</label>
-        <template lwc:if={error}>
-            <div class="navds-error-message navds-error-message--medium navds-label">
-                <div class="slds-grid slds-p-bottom_small">
-                    <lightning-icon
-                        icon-name="utility:warning"
-                        size="x-small"
-                        variant="error"
-                        class="slds-p-right_xx-small"
-                    >
-                    </lightning-icon
-                    >Du må godta vilkårene
-                </div>
-            </div>
-        </template>
+        /><label for="checkbox" class="navds-checkbox__label"
+            ><span class="navds-checkbox__icon"
+                ><svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    width="0.8125rem"
+                    height="0.625rem"
+                    viewBox="0 0 13 10"
+                    fill="none"
+                    focusable="false"
+                    role="img"
+                    aria-hidden="true"
+                >
+                    <path
+                        d="M4.03524 6.41478L10.4752 0.404669C11.0792 -0.160351 12.029 -0.130672 12.5955 0.47478C13.162 1.08027 13.1296 2.03007 12.5245 2.59621L5.02111 9.59934C4.74099 9.85904 4.37559 10 4.00025 10C3.60651 10 3.22717 9.84621 2.93914 9.56111L0.439143 7.06111C-0.146381 6.47558 -0.146381 5.52542 0.439143 4.93989C1.02467 4.35437 1.97483 4.35437 2.56036 4.93989L4.03524 6.41478Z"
+                        fill="currentColor"
+                    ></path></svg></span
+            ><span class="navds-checkbox__icon-indeterminate"></span
+            ><span class="navds-checkbox__content"
+                ><span
+                    id="Rnt6H1"
+                    aria-hidden="true"
+                    class="navds-checkbox__label-text navds-body-short navds-body-short--medium"
+                    >{labelText}</span
+                ></span
+            ></label
+        >
     </div>
+    <template lwc:if={error}>
+        <div class="navds-error-message navds-error-message--medium navds-label navds-error-message--show-icon">
+            <svg
+                viewBox="0 0 17 16"
+                fill="none"
+                xmlns="http://www.w3.org/2000/svg"
+                focusable="false"
+                aria-hidden="true"
+            >
+                <path
+                    fill-rule="evenodd"
+                    clip-rule="evenodd"
+                    d="M3.49209 11.534L8.11398 2.7594C8.48895 2.04752 9.50833 2.04743 9.88343 2.75924L14.5073 11.5339C14.8582 12.1998 14.3753 13 13.6226 13H4.37685C3.6242 13 3.14132 12.1999 3.49209 11.534ZM9.74855 10.495C9.74855 10.9092 9.41276 11.245 8.99855 11.245C8.58433 11.245 8.24855 10.9092 8.24855 10.495C8.24855 10.0808 8.58433 9.74497 8.99855 9.74497C9.41276 9.74497 9.74855 10.0808 9.74855 10.495ZM9.49988 5.49997C9.49988 5.22383 9.27602 4.99997 8.99988 4.99997C8.72373 4.99997 8.49988 5.22383 8.49988 5.49997V7.99997C8.49988 8.27611 8.72373 8.49997 8.99988 8.49997C9.27602 8.49997 9.49988 8.27611 9.49988 7.99997V5.49997Z"
+                    fill="currentColor"
+                ></path></svg
+            >Du må godta vilkårene
+        </div>
+    </template>
 </template>
