--- a/force-app/main/default/lwc/stoRegisterThread/registerThreadTemplate.html
+++ b/force-app/main/default/lwc/stoRegisterThread/registerThreadTemplate.html
@@ -10,7 +10,7 @@
         <template lwc:else>
             <p class="navds-bodylong navds-bodylong--large subtitle">{openThreadText}</p>
         </template>
-        <template lwc:if={showspinner}>
+        <template lwc:if={showSpinner}>
             <div class="spinner-container">
                 <svg
                     tabindex="0"
@@ -100,20 +100,16 @@
                 </c-community-read-more>
 
                 <!-- Vilkaer checkbox -->
-                <div class="slds-grid vilkar-container">
+                <div class="slds-grid slds-wrap vilkar-container">
                     <c-community-checkbox
-                        label-text={label.acceptermtext}
+                        label-text={labels.ACCEPT_TERM_TEXT}
                         oncheckedchanged={handleChecked}
-                        class="checkboxContainer"
-                    ></c-community-checkbox
-                    ><button
-                        onclick={showTerms}
-                        class="navds-link navds-link--action focusBtn vilkar-link"
-                        tabindex="0"
-                    >
-                        {label.showtermstext}
+                    ></c-community-checkbox>
+                    <button onclick={showTerms} class="navds-link navds-link--action vilkar-link" tabindex="0">
+                        {labels.SHOW_TERM_TEXT}
                     </button>
                 </div>
+
                 <button
                     class="navds-button navds-button--primary navds-button--medium"
                     type="submit"
@@ -134,8 +130,6 @@
                                 <c-sto-message-inbox-item
                                     thread={thread}
                                     content-type={contentType}
-                                    index={index}
-                                    onclosethread={handleCloseThread}
                                 ></c-sto-message-inbox-item>
                             </template>
                             <template lwc:else>
@@ -167,7 +161,7 @@
             onfocuslast={handleFocusLast}
             hide-padding-mobile
         >
-            <h1 slot="modalHeader" class="textLeftAlign-mobile leftMargin-mobile">{label.SERVICE_TERMS_HEADER}</h1>
+            <h1 slot="modalHeader" class="textLeftAlign-mobile leftMargin-mobile">{labels.SERVICE_TERMS_HEADER}</h1>
             <div slot="modalContent">
                 <section>
                     <form class="betingelser-panel panel side-innhold">
@@ -184,7 +178,7 @@
                     onclick={termsAccepted}
                     type="submit"
                 >
-                    {label.ACCEPT_TERMS_BUTTON}
+                    {labels.ACCEPT_TERMS_BUTTON}
                 </button>
 
                 <button
@@ -193,7 +187,7 @@
                     aria-controls="betingelser"
                     onclick={termsDenied}
                 >
-                    {label.DENY_TERMS_BUTTON}
+                    {labels.DENY_TERMS_BUTTON}
                 </button>
             </div>
         </c-community-modal>
