--- a/force-app/main/default/lwc/stoMessageInboxItem/stoMessageInboxItem.html
+++ b/force-app/main/default/lwc/stoMessageInboxItem/stoMessageInboxItem.html
@@ -14,7 +14,7 @@
                 <template lwc:if={showReadStatus}>
                     <span
                         class="navds-tag navds-tag--info navds-tag--small navds-body-short navds-body-short--small tag-spacing"
-                        >{unreadmessage}</span
+                        >{unreadMessage}</span
                     >
                 </template>
                 <template lwc:if={showStatus}>
