--- a/force-app/main/default/lwc/communityConfirmation/communityConfirmation.html
+++ b/force-app/main/default/lwc/communityConfirmation/communityConfirmation.html
@@ -1,5 +1,5 @@
 <template>
-    <div class="slds-grid slds-wrap">
+    <div class="slds-grid slds-wrap container">
         <div class="slds-col slds-size_12-of-12 slds-medium-size_1-of-12 slds-var-p-right_small">
             <span class="slds-icon_container">
                 <svg class="slds-icon slds-icon-text-default slds-icon_large" aria-hidden="true">
