BTO knapp på intern flate skal være Send og avslutt

--- a/force-app/main/default/lwc/stoMessagingContainer/stoMessagingContainer.html
+++ b/force-app/main/default/lwc/stoMessagingContainer/stoMessagingContainer.html
@@ -43,7 +43,7 @@
             card-title={cardTitle}
             show-close={showClose}
             check-medskriv={checkMedskriv}
-            submit-button-label={labels.SHARE_WITH_USER_LABEL}
+            submit-button-label={submitButtonLabel}
             onsubmitfromparent={handleSubmit}
             onclosedevent={handleClosed}
             new-design
