--- a/force-app/main/default/lwc/crmStoMessaging/newDesignTemplate.html
+++ b/force-app/main/default/lwc/crmStoMessaging/newDesignTemplate.html
@@ -15,7 +15,7 @@
         onenglisheventtwo={handleEnglishEventTwo}
         class={computeClasses}
         show-quick
-        submit-button-label={submitButtonLabel}
+        submit-button-label={buttonLabel}
         onsubmitfromchild={handleSubmit}
         new-design
         is-thread={isThread}
