--- a/force-app/main/default/lwc/crmStoMessaging/oldDesignTemplate.html
+++ b/force-app/main/default/lwc/crmStoMessaging/oldDesignTemplate.html
@@ -15,6 +15,7 @@
         class={computeClasses}
         show-quick
         show-language-change-modal={showLanguageChangeModal}
+        submit-button-label={buttonLabel}
     >
         <c-crm-sto-messaging-toolbar slot="toolbar" object-api-name={objectApiName}></c-crm-sto-messaging-toolbar>
         <template lwc:if={showMedskrivBlocker}>
