--- a/force-app/main/default/lwc/nksFlowButtonContainer/nksFlowButtonContainer.html
+++ b/force-app/main/default/lwc/nksFlowButtonContainer/nksFlowButtonContainer.html
@@ -2,17 +2,19 @@
     <lightning-layout multiple-rows="true" size="12">
         <lightning-layout-item class="slds-size_12-of-12">
             <lightning-layout class="slds-var-m-bottom_small" size="12">
-                <lightning-layout-item class="slds-size_6-of-12" style="padding-right: 5px">
-                    <c-nks-flow-button
-                        flow-name="Case_STO_Complete"
-                        button-label="Ferdigstill"
-                        button-color="green"
-                        input-variables={inputVariables}
-                        onflowfinished={flowFinishHandler}
-                        is-disabled={completeDisabled}
-                    ></c-nks-flow-button>
-                </lightning-layout-item>
-                <lightning-layout-item class="slds-size_6-of-12">
+                <template lwc:if={isNotBTO}>
+                    <lightning-layout-item class="slds-size_6-of-12" style="padding-right: 5px">
+                        <c-nks-flow-button
+                            flow-name="Case_STO_Complete"
+                            button-label="Ferdigstill"
+                            button-color="green"
+                            input-variables={inputVariables}
+                            onflowfinished={flowFinishHandler}
+                            is-disabled={completeDisabled}
+                        ></c-nks-flow-button>
+                    </lightning-layout-item>
+                </template>
+                <lightning-layout-item class={sldsSize}>
                     <c-nks-flow-button
                         flow-name="STO_Case_Set_Reserved"
                         button-label="Reserver til meg"
