--- a/force-app/main/default/lwc/communityConversationNoteRelatedItem/communityConversationNoteRelatedItem.html
+++ b/force-app/main/default/lwc/communityConversationNoteRelatedItem/communityConversationNoteRelatedItem.html
@@ -1,3 +1,18 @@
 <template>
-    <lightning-formatted-url value={url} label={label} class="slds-show"></lightning-formatted-url>
+    <a href={url}>
+        <span class="navds-list__item-marker navds-list__item-marker--bullet">
+            <svg
+                width="0.375rem"
+                height="0.375rem"
+                viewBox="0 0 6 6"
+                fill="none"
+                xmlns="http://www.w3.org/2000/svg"
+                aria-hidden="true"
+                focusable="false"
+            >
+                <rect width="6" height="6" rx="3" fill="currentColor"></rect>
+            </svg> </span
+        >&nbsp;&nbsp;
+        <span>{label}</span>
+    </a>
 </template>
