--- a/force-app/main/default/lwc/communityThreadViewer/communityThreadViewer.html
+++ b/force-app/main/default/lwc/communityThreadViewer/communityThreadViewer.html
@@ -7,8 +7,8 @@
         <template lwc:if={showCloseButton}>
             <div class="end-dialogue-container">
                 <p class="navds-bodylong navds-bodylong--large">
-                    Vi ser at du allerede har 3 åpne meldinger på dette temaet . Hvis du vil opprette en ny samtale, må
-                    du derfor avslutte en av de du allerede har.
+                    Vi ser at du allerede har tre åpne meldinger på dette temaet . Hvis du vil opprette en ny samtale,
+                    må du derfor avslutte en av de du allerede har.
                 </p>
                 <p class="navds-bodylong navds-bodylong--large subtitle">Ønsker du å avslutte denne samtalen?</p>
                 <button
