updated modal text

--- a/force-app/main/default/lwc/stoEndDialogueModal/stoEndDialogueModal.html
+++ b/force-app/main/default/lwc/stoEndDialogueModal/stoEndDialogueModal.html
@@ -12,24 +12,20 @@
         <div slot="modalContent" class="navds-modal__body">
             <div class="navds-bodylong navds-bodylong--medium">
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur egestas mattis accumsan.
-                    Vestibulum vestibulum blandit ipsum, a porttitor nunc pretium eu. Vivamus turpis eros, dictum eu
-                    volutpat eu, dictum id nisl. Suspendisse nec tellus lobortis, egestas risus id, porta tellus. Mauris
-                    leo erat, vestibulum eu nunc et, mollis luctus tellus. Morbi consectetur interdum ante nec dictum.
-                    Nam facilisis ante quis nunc molestie viverra. Mauris est tellus, viverra vel lectus vulputate,
-                    ultricies hendrerit nulla.
+                    Etter at du avslutter, kan du ikke sende flere meldinger i denne samtalen. Du kan fremdeles lese
+                    samtalen i innboksen din. Den er også tilgjengelig for veilederen i Nav.
                 </p>
             </div>
         </div>
         <div slot="modalFooter" class="navds-modal__footer">
             <button class="navds-button navds-button--secondary navds-button--medium" onclick={closeModal}>
-                Avbryt
+                Nei, gå tilbake
             </button>
             <button
                 class="navds-button navds-button--primary navds-button--medium lastFocusElement"
                 onclick={closeThread}
             >
-                Ja, jeg er sikker
+                Ja, avslutt samtalen
             </button>
         </div>
     </c-community-modal>
