--- a/force-app/main/default/lwc/stoMessageInbox/stoMessageInbox.html
+++ b/force-app/main/default/lwc/stoMessageInbox/stoMessageInbox.html
@@ -13,7 +13,7 @@
                 <a
                     href="https://www.nav.no/dokumentarkiv"
                     target="_self"
-                    class="navds-link navds-link--action"
+                    class="navds-link navds-link--action archive-link"
                     onclick={handleDocumentArchiveClick}
                     >brev og vedtak</a
                 >
