--- a/force-app/main/default/lwc/stoRegisterThread/registerThreadTemplate.html
+++ b/force-app/main/default/lwc/stoRegisterThread/registerThreadTemplate.html
@@ -160,18 +160,17 @@
             onkeyup={handleKeyboardEvent}
             onfocuslast={handleFocusLast}
             hide-padding-mobile
+            hide-padding
         >
-            <h1 slot="modalHeader" class="textLeftAlign-mobile leftMargin-mobile">{labels.SERVICE_TERMS_HEADER}</h1>
-            <div slot="modalContent">
-                <section>
-                    <form class="betingelser-panel panel side-innhold">
-                        <div class="blokk-m slds-var-m-top_medium betingelser-div">
-                            <lightning-formatted-rich-text value={termsContentText}></lightning-formatted-rich-text>
-                        </div>
-                    </form>
-                </section>
+            <h1 slot="modalHeader" class="navds-modal__header">{labels.SERVICE_TERMS_HEADER}</h1>
+            <div slot="modalContent" class="navds-modal__body">
+                <form class="">
+                    <div class="navds-bodylong navds-bodylong--medium">
+                        <lightning-formatted-rich-text value={termsContentText}></lightning-formatted-rich-text>
+                    </div>
+                </form>
             </div>
-            <div slot="modalFooter" class="modal-footer">
+            <div slot="modalFooter" class="navds-modal__footer">
                 <button
                     class="navds-button navds-button--primary navds-button--medium button-width"
                     aria-controls="betingelser"
@@ -180,7 +179,6 @@
                 >
                     {labels.ACCEPT_TERMS_BUTTON}
                 </button>
-
                 <button
                     class="navds-button navds-button--secondary navds-button--medium button-width lastFocusElement"
                     type="submit"
