--- a/force-app/main/default/lwc/communityConversationNote/communityConversationNote.html
+++ b/force-app/main/default/lwc/communityConversationNote/communityConversationNote.html
@@ -1,53 +1,55 @@
 <template>
-    <p class="navds-bodylong navds-bodylong--medium">Samtalereferat</p>
-    <h1 class="navds-heading navds-heading--xlarge">{themeGroup}</h1>
-    <div class="conv-note-container">
-        <div
-            class="navds-chat navds-chat--left navds-chat--top-text-left navds-chat--medium"
-            data-color=""
-            data-variant=""
-        >
-            <div class="navds-chat__bubble-wrapper navds-body-long navds-body-long--medium">
-                <div class="navds-chat__bubble">
-                    <svg
-                        xmlns="http://www.w3.org/2000/svg"
-                        width="64"
-                        height="20"
-                        viewBox="320 260 240 60"
-                        preserveAspectRatio="xMidYMid meet"
-                    >
-                        <path
-                            fill="#c30000"
-                            fill-rule="evenodd"
-                            d="M514.8,269.8h-19.9s-1.4,0-1.9,1.2l-11,33.8-11-33.8c-.5-1.2-1.9-1.2-1.9-1.2h-38.3c-.8,0-1.5.7-1.5,1.5v11.5c0-9.1-9.7-13-15.3-13-12.7,0-21.2,8.4-23.8,21.1-.1-8.4-.8-11.5-3.1-14.5-1-1.5-2.5-2.8-4.2-3.8-3.4-2-6.4-2.7-12.9-2.7h-7.7s-1.4,0-1.9,1.2l-7,17.3v-17c0-.8-.7-1.5-1.5-1.5h-17.7s-1.4,0-1.9,1.2l-7.2,18s-.7,1.8.9,1.8h6.8v34.2c0,.9.7,1.5,1.5,1.5h17.6c.8,0,1.5-.7,1.5-1.5v-34.2h6.9c3.9,0,4.8.1,6.3.8.9.4,1.8,1,2.2,1.9.9,1.7,1.2,3.8,1.2,10v21.5c0,.9.7,1.5,1.5,1.5h16.8s1.9,0,2.6-1.9l3.7-9.2c5,7,13.1,11.1,23.3,11.1h2.2s1.9,0,2.7-1.9l6.5-16.1v16.5c0,.9.7,1.5,1.5,1.5h17.2s1.9,0,2.7-1.9c0,0,6.9-17.1,6.9-17.2h0c.3-1.4-1.5-1.4-1.5-1.4h-6.1v-29.3l19.3,47.9c.8,1.9,2.6,1.9,2.6,1.9h20.3s1.9,0,2.7-1.9l21.4-53c.7-1.8-1.4-1.8-1.4-1.8h0ZM429.2,306h-11.5c-4.6,0-8.3-3.7-8.3-8.3s3.7-8.3,8.3-8.3h3.2c4.6,0,8.3,3.7,8.3,8.3v8.3h0Z"
-                        />
-                    </svg>
-                    <h3 class="navds-chat__top-text navds-heading navds-heading--xsmall">
-                        <span class="navds-detail">
-                            <c-crm-nav-formatted-date date={date}></c-crm-nav-formatted-date>
-                        </span>
-                    </h3>
-                    <lightning-formatted-rich-text
-                        value={note}
-                        class="navds-body-long navds-body-long--medium line-breaks"
-                    ></lightning-formatted-rich-text>
-                    <template lwc:if={showRelatedNotes}>
-                        <div class="border"></div>
-                        <p class="navds-body-long navds-body-long--medium">
-                            Du har flere referater fra samtaler om denne henvendelsen:
-                        </p>
-                        <div class="navds-list navds-list--medium navds-body-long navds-body-long--medium">
-                            <ul>
-                                <template for:each={relatedNotes} for:item="note">
-                                    <li key={name} class="navds-list__item">
-                                        <c-community-conversation-note-related-item
-                                            note={note}
-                                        ></c-community-conversation-note-related-item>
-                                    </li>
-                                </template>
-                            </ul>
-                        </div>
-                    </template>
+    <div class="main-container">
+        <p class="navds-bodylong navds-bodylong--medium">Samtalereferat</p>
+        <h1 class="navds-heading navds-heading--xlarge">{themeGroup}</h1>
+        <div class="conv-note-container">
+            <div
+                class="navds-chat navds-chat--left navds-chat--top-text-left navds-chat--medium"
+                data-color=""
+                data-variant=""
+            >
+                <div class="navds-chat__bubble-wrapper navds-body-long navds-body-long--medium">
+                    <div class="navds-chat__bubble">
+                        <svg
+                            xmlns="http://www.w3.org/2000/svg"
+                            width="64"
+                            height="20"
+                            viewBox="320 260 240 60"
+                            preserveAspectRatio="xMidYMid meet"
+                        >
+                            <path
+                                fill="#c30000"
+                                fill-rule="evenodd"
+                                d="M514.8,269.8h-19.9s-1.4,0-1.9,1.2l-11,33.8-11-33.8c-.5-1.2-1.9-1.2-1.9-1.2h-38.3c-.8,0-1.5.7-1.5,1.5v11.5c0-9.1-9.7-13-15.3-13-12.7,0-21.2,8.4-23.8,21.1-.1-8.4-.8-11.5-3.1-14.5-1-1.5-2.5-2.8-4.2-3.8-3.4-2-6.4-2.7-12.9-2.7h-7.7s-1.4,0-1.9,1.2l-7,17.3v-17c0-.8-.7-1.5-1.5-1.5h-17.7s-1.4,0-1.9,1.2l-7.2,18s-.7,1.8.9,1.8h6.8v34.2c0,.9.7,1.5,1.5,1.5h17.6c.8,0,1.5-.7,1.5-1.5v-34.2h6.9c3.9,0,4.8.1,6.3.8.9.4,1.8,1,2.2,1.9.9,1.7,1.2,3.8,1.2,10v21.5c0,.9.7,1.5,1.5,1.5h16.8s1.9,0,2.6-1.9l3.7-9.2c5,7,13.1,11.1,23.3,11.1h2.2s1.9,0,2.7-1.9l6.5-16.1v16.5c0,.9.7,1.5,1.5,1.5h17.2s1.9,0,2.7-1.9c0,0,6.9-17.1,6.9-17.2h0c.3-1.4-1.5-1.4-1.5-1.4h-6.1v-29.3l19.3,47.9c.8,1.9,2.6,1.9,2.6,1.9h20.3s1.9,0,2.7-1.9l21.4-53c.7-1.8-1.4-1.8-1.4-1.8h0ZM429.2,306h-11.5c-4.6,0-8.3-3.7-8.3-8.3s3.7-8.3,8.3-8.3h3.2c4.6,0,8.3,3.7,8.3,8.3v8.3h0Z"
+                            />
+                        </svg>
+                        <h3 class="navds-chat__top-text navds-heading navds-heading--xsmall">
+                            <span class="navds-detail">
+                                <c-crm-nav-formatted-date date={date}></c-crm-nav-formatted-date>
+                            </span>
+                        </h3>
+                        <lightning-formatted-rich-text
+                            value={note}
+                            class="navds-body-long navds-body-long--medium line-breaks"
+                        ></lightning-formatted-rich-text>
+                        <template lwc:if={showRelatedNotes}>
+                            <div class="border"></div>
+                            <p class="navds-body-long navds-body-long--medium">
+                                Du har flere referater fra samtaler om denne henvendelsen:
+                            </p>
+                            <div class="navds-list navds-list--medium navds-body-long navds-body-long--medium">
+                                <ul>
+                                    <template for:each={relatedNotes} for:item="note">
+                                        <li key={name} class="navds-list__item">
+                                            <c-community-conversation-note-related-item
+                                                note={note}
+                                            ></c-community-conversation-note-related-item>
+                                        </li>
+                                    </template>
+                                </ul>
+                            </div>
+                        </template>
+                    </div>
                 </div>
             </div>
         </div>
