--- a/force-app/main/default/lwc/stoMedskrivSamtykke/stoMedskrivSamtykke.html
+++ b/force-app/main/default/lwc/stoMedskrivSamtykke/stoMedskrivSamtykke.html
@@ -7,7 +7,7 @@
                 <c-ds-button
                     class={btnClasses}
                     variant="secondary"
-                    size="small"
+                    size="medium"
                     onclick={revokeMedskriv}
                     text="Fjern min godkjenning"
                 ></c-ds-button>
