--- a/force-app/main/default/lwc/stoInboxInformation/stoInboxInformation.html
+++ b/force-app/main/default/lwc/stoInboxInformation/stoInboxInformation.html
@@ -1,19 +1,21 @@
 <template>
-    <div class="info-text">
-        <c-community-alert alert-type="info" alert-text={infoText}></c-community-alert>
-    </div>
-    <template lwc:if={showSurveyButton}>
-        <div class="survey-container">
-            <h2 class="navds-heading navds-heading--medium navds-typo--spacing">
-                Vi ønsker å lære av din opplevelse. Har du tid til å svare på 2 spørsmål?
-            </h2>
-            <c-ds-button
-                variant="primary"
-                size="medium"
-                onclick={navigateToSurvey}
-                text="Klikk her for å svare"
-            ></c-ds-button>
-            <span class="navds-body-short navds-body-short--medium survey-span">Tilbakemeldingen er anonym.</span>
+    <div class="container">
+        <div class="info-text">
+            <c-community-alert alert-type="info" alert-text={infoText}></c-community-alert>
         </div>
-    </template>
+        <template lwc:if={showSurveyButton}>
+            <div class="survey-container">
+                <h2 class="navds-heading navds-heading--medium navds-typo--spacing">
+                    Vi ønsker å lære av din opplevelse. Har du tid til å svare på 2 spørsmål?
+                </h2>
+                <c-ds-button
+                    variant="primary"
+                    size="medium"
+                    onclick={navigateToSurvey}
+                    text="Klikk her for å svare"
+                ></c-ds-button>
+                <span class="navds-body-short navds-body-short--medium survey-span">Tilbakemeldingen er anonym.</span>
+            </div>
+        </template>
+    </div>
 </template>
