--- a/force-app/main/default/lwc/nksViewThread/nksViewThread.html
+++ b/force-app/main/default/lwc/nksViewThread/nksViewThread.html
@@ -4,5 +4,6 @@
         max-length={maxLength}
         log-amplitude-event
         onlogevent={logAmplitudeEvent}
+        show-close-button={showCloseButton}
     ></c-community-thread-viewer>
 </template>
