--- a/force-app/main/default/lwc/stoMessageInboxItem/stoMessageInboxItem.html
+++ b/force-app/main/default/lwc/stoMessageInboxItem/stoMessageInboxItem.html
@@ -1,6 +1,6 @@
 <template>
     <a class={panelClass} href={linkUrl} onclick={handleNavigation}>
-        <div class="slds-grid slds-grid_align-spread slds-var-p-bottom_small">
+        <div class="slds-grid slds-grid_align-spread text-padding">
             <lightning-formatted-date-time
                 value={thread.latestMessageDate}
                 month="long"
