Fikser feil vi fant i testrunde 2

--- a/force-app/main/default/lwc/communityThreadViewer/communityThreadViewer.html
+++ b/force-app/main/default/lwc/communityThreadViewer/communityThreadViewer.html
@@ -66,6 +66,7 @@
                             label="Ny melding"
                             max-length={maxLength}
                             ontextchanged={handleTextChange}
+                            class="inputTextbox"
                         ></c-community-textarea>
                     </div>
                     <button
