--- a/force-app/main/default/lwc/stoMedskrivSamtykke/stoMedskrivSamtykke.html
+++ b/force-app/main/default/lwc/stoMedskrivSamtykke/stoMedskrivSamtykke.html
@@ -14,4 +14,7 @@
             </div>
         </div>
     </template>
+    <template lwc:else>
+        <div class="panel-bottom-margin"></div>
+    </template>
 </template>
