--- a/force-app/main/default/lwc/stoInboxInformation/stoInboxInformation.html
+++ b/force-app/main/default/lwc/stoInboxInformation/stoInboxInformation.html
@@ -16,7 +16,7 @@
                         text="Klikk her for å svare"
                     ></c-ds-button>
                     <span class="navds-body-short navds-body-short--medium survey-span"
-                        >Din tilbakemeldingen er anonym.</span
+                        >Din tilbakemelding er anonym.</span
                     >
                 </div>
             </div>
