--- a/force-app/main/default/lwc/communityConversationNote/communityConversationNote.html
+++ b/force-app/main/default/lwc/communityConversationNote/communityConversationNote.html
@@ -8,7 +8,7 @@
                 data-color=""
                 data-variant=""
             >
-                <div class="navds-chat__bubble-wrapper navds-body-long navds-body-long--medium bubble-width">
+                <div class="navds-chat__bubble-wrapper navds-body-long navds-body-long--medium">
                     <div class="navds-chat__bubble">
                         <svg
                             xmlns="http://www.w3.org/2000/svg"
