--- a/force-app/main/default/lwc/stoMessageInboxItem/stoMessageInboxItem.html
+++ b/force-app/main/default/lwc/stoMessageInboxItem/stoMessageInboxItem.html
@@ -1,7 +1,7 @@
 <template>
     <a class={panelClass} href={linkUrl} onclick={handleNavigation}>
-        <div class="slds-grid slds-grid_align-spread text-padding">
-            <div class="slds-col slds-grow-none">
+        <div class="slds-grid text-padding align-status-row">
+            <div class="slds-col slds-grow no-wrap-date">
                 <lightning-formatted-date-time
                     value={thread.latestMessageDate}
                     month="long"
