--- a/force-app/main/default/lwc/stoMessageInboxItem/stoMessageInboxItem.html
+++ b/force-app/main/default/lwc/stoMessageInboxItem/stoMessageInboxItem.html
@@ -14,8 +14,7 @@
             </div>
             <div class="status-container">
                 <template lwc:if={showReadStatus}>
-                    <span
-                        class="navds-tag navds-tag--info navds-tag--small navds-body-short navds-body-short--small tag-spacing"
+                    <span class="navds-tag navds-tag--info navds-tag--small navds-body-short navds-body-short--small"
                         >{unreadMessage}</span
                     >
                 </template>
